# Tech-Challenge-TCGL01

./: .gitignore  Makefile  README.md  make.ps1
.github/workflows/: ci.yml  deploy.yml
app/api/: .dockerignore  Dockerfile  pyproject.toml
app/api/src/: db.py  main.py  repo.py
app/api/tests/: test_catalog.py  test_endpoints.py
app/web/: index.html  package-lock.json  package.json  vite.config.js
app/web/src/: App.jsx  api.js  format.js  styles.css
docs/: architecture.md  incident-response.md  resilience.md  runbook.md  slo.md
docs/adr/: 001-ecs-fargate-over-serverless.md  002-rds-postgresql-over-dynamodb.md  003-alb-as-api-front-door.md  004-terraform-over-cloudformation-cdk.md  005-cloudfront-edge-waf-opt-in.md  006-origin-pinning-secret-header.md  007-rolling-deploys-circuit-breaker.md  008-cloudwatch-native-dashboard.md  009-idempotent-upsert-by-event-id.md  010-oidc-ci-sha-pinned-images.md  011-canary-and-alb-metrics-as-slis.md  012-disable-edge-error-caching.md  013-managed-master-password.md  014-historical-catalog-in-db.md
docs/evidence/: deployment-smoke.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/envs/demo/: backend.hcl.example  common.tfvars  demo.tfvars.example
infra/modules/api/: alb.tf  iam.tf  main.tf  outputs.tf  variables.tf
infra/modules/cicd/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/edge/: main.tf  outputs.tf  variables.tf  waf.tf
ingestion/: handler.py
ingestion/tests/: test_deep_seed.py  test_transform.py
(+19 files in other folders)
